--- a/templates/repeat.html
+++ b/templates/repeat.html
@@ -1,4 +1,6 @@
 <!-- recursing over the values available to the main.entries scope-->
-<div ng-repeat="entry in main.entries">
-	<p>{{entry.title}} has the value of {{entry.value}}</h3>
+<div style="border:solid; border-color: gray;">
+	<div ng-repeat="entry in main.entries">
+		<p>{{entry.title}} has the value of {{entry.value}}</h3>
+	</div>
 </div>
