simpel redigering av scope variabler med direktiv

--- a/templates/repeat.html
+++ b/templates/repeat.html
@@ -1,6 +1,6 @@
 <!-- recursing over the values available to the main.entries scope-->
 <div style="border:solid; border-color: gray;">
 	<div ng-repeat="entry in main.entries">
-		<p>{{entry.title}} has the value of {{entry.value}}</h3>
+		<p>{{entry.title}} has the value of {{entry.value}}</p>
 	</div>
 </div>
