--- a/templates/controllerAs.html
+++ b/templates/controllerAs.html
@@ -8,14 +8,21 @@
 			vm.value = "Some text";
 		}]);
 </pre>
-<pre>{{controller | json}}</pre>
+<pre>controller : {{controller | json}}</pre>
 <p>ng-model="controller.value": <input type="text" ng-model="controller.value"></p>
 <p>We can get values from the controller by accessing the controller alias, in this case <i>controller</i>. { {controller.value } } = <b>{{controller.value}}</b> </p>
 
-<div ng-controller="NestedCtrl as nested" style="border:dotted;">
+<div ng-controller="NestedCtrlAs as nested" style="border:dotted;">
 <h3>ng-controller="NestedCtrl as nested"</h3>
-	<pre>{{nested | json}}</pre>
+	<pre>
+	angular.module('angularPlay.controllers')
+		.controller('NestedCtrlAs', [function(){
+			vm = this;
+		}]);
+	</pre>
+	<pre>nested : {{nested | json}}</pre>
 	<p>We can easily access parent controllers by alias</p>
 	<p>ng-model="controller.value": <input type="text" ng-model="controller.value"></p>
+	<p>ng-model="nested.value": <input type="text" ng-model="nested.value"></p>
 	<p>{ { nested.value } } = "{{nested.value}}" is not defined</p>
 </div>
